--- a/src/styles/starlight.css
+++ b/src/styles/starlight.css
@@ -2512,7 +2512,7 @@ footer .right a:hover {
   width: 260px;
   flex-shrink: 0;
   height: 100%;
-  background: rgba(15, 23, 42, 0.9);
+  background-color: hsla(0,0%,100%,.05);
   border-right: 1px solid rgba(255, 255, 255, 0.08);
   display: flex;
   flex-direction: column;
